# qbrainwave

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  mindwave.cpp  mindwave.h
.github/workflows/: cmake-linux.yml  cmake-macos.yml  cmake-msvc.yml  cmake-windows.yml
desktop/: Info.plist  qbrainwave.desktop
scripts/ci/macos/: convert_to_universal.sh  fetch_deps.sh
